@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.37 [20130920] [svn: r517]
+Changelog for sg3_utils-1.37 [20130923] [svn: r518]
   - sg_compare_and_write: fix wrprotect setting
     - add --quiet option to suppress miscompare report
     - merge features from another implementation
@@ -12,6 +12,7 @@ Changelog for sg3_utils-1.37 [20130920] [svn: r517]
   - sg_persist: fix core dump on -Q option
   - sg_unmap: fix core dump on -g option
   - sg_vpd: dev_id VPD: T10 vendor id designator clean up
+    - cleanup up dev_id NAA-3: locally assigned
   - sg_ses: add --nickname and --nickid options
     - eiioe added to additional element status page (ses3r6)
     - multiple --filter options to prune output
